--- a/Task 1/blog.html
+++ b/Task 1/blog.html
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="blog-body">
+          <div class="blog-body d-flex flex-column justify-content-between">
             <div class="blog-body-header d-flex gap-2">
               <div class="category">Category</div>
               <div class="date faded-text-grey">November 22, 2021</div>
@@ -113,9 +113,9 @@
       <div class="headline text-center text-md-start my-4 px-md-150">
         Latest News
       </div>
-      <div class="row py-4 px-md-150 gy-5">
+      <div class="row py-4 px-md-150 g-5">
         <div class="col-md-4">
-          <div class="blog-card d-flex flex-column">
+          <div class="blog-card h-100 d-flex flex-column gap-3">
             <div class="blog-img">
               <img
                 class="img-fluid"
@@ -123,13 +123,17 @@
                 alt="blog card image"
               />
             </div>
-            <div class="blog-body">
-              <div class="blog-body-header d-flex gap-2">
-                <div class="category">Category</div>
-                <div class="date faded-text-grey">November 22, 2021</div>
-              </div>
-              <div class="blog-description f-20">
-                Pitch termsheet backing validation focus release.
+            <div
+              class="blog-body h-100 d-flex flex-column justify-content-between gap-4"
+            >
+              <div class="blog-body-wrapper d-flex flex-column gap-3">
+                <div class="blog-body-header d-flex gap-2">
+                  <div class="category">Category</div>
+                  <div class="date faded-text-grey">November 22, 2021</div>
+                </div>
+                <div class="blog-description f-20">
+                  Pitch termsheet backing validation focus release.
+                </div>
               </div>
               <div class="blog-author d-flex gap-2">
                 <div class="author-image">
@@ -140,6 +144,182 @@
                   />
                 </div>
                 <div class="author-name">Chandler Bing</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="blog-card h-100 d-flex flex-column gap-3">
+            <div class="blog-img">
+              <img
+                class="img-fluid"
+                src="./assets/imgs/blog2.png"
+                alt="blog card image"
+              />
+            </div>
+            <div
+              class="blog-body h-100 d-flex flex-column justify-content-between gap-4"
+            >
+              <div class="blog-body-wrapper d-flex flex-column gap-3">
+                <div class="blog-body-header d-flex gap-2">
+                  <div class="category">Category</div>
+                  <div class="date faded-text-grey">November 22, 2021</div>
+                </div>
+                <div class="blog-description f-20">
+                  Seed round direct mailing non-disclosure agreement graphical
+                  user interface rockstar.
+                </div>
+              </div>
+              <div class="blog-author d-flex gap-2">
+                <div class="author-image">
+                  <img
+                    class="img-fluid"
+                    src="./assets/imgs/green.png"
+                    alt="Rachel Green"
+                  />
+                </div>
+                <div class="author-name">Rachel Green</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="blog-card h-100 d-flex flex-column gap-3">
+            <div class="blog-img">
+              <img
+                class="img-fluid"
+                src="./assets/imgs/blog3.png"
+                alt="blog card image"
+              />
+            </div>
+            <div
+              class="blog-body h-100 d-flex flex-column justify-content-between gap-4"
+            >
+              <div class="blog-body-wrapper d-flex flex-column gap-3">
+                <div class="blog-body-header d-flex gap-2">
+                  <div class="category">Category</div>
+                  <div class="date faded-text-grey">November 22, 2021</div>
+                </div>
+                <div class="blog-description f-20">
+                  Beta prototype sales iPad gen-z marketing network effects
+                  value proposition
+                </div>
+              </div>
+              <div class="blog-author d-flex gap-2">
+                <div class="author-image">
+                  <img
+                    class="img-fluid"
+                    src="./assets/imgs/geller.png"
+                    alt="Monica Geller"
+                  />
+                </div>
+                <div class="author-name">Monica Geller</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row py-4 px-md-150 g-5">
+        <div class="col-md-4">
+          <div class="blog-card h-100 d-flex flex-column gap-3">
+            <div class="blog-img">
+              <img
+                class="img-fluid"
+                src="./assets/imgs/blog1.png"
+                alt="blog card image"
+              />
+            </div>
+            <div
+              class="blog-body h-100 d-flex flex-column justify-content-between gap-4"
+            >
+              <div class="blog-body-wrapper d-flex flex-column gap-3">
+                <div class="blog-body-header d-flex gap-2">
+                  <div class="category">Category</div>
+                  <div class="date faded-text-grey">November 22, 2021</div>
+                </div>
+                <div class="blog-description f-20">
+                  Pitch termsheet backing validation focus release.
+                </div>
+              </div>
+              <div class="blog-author d-flex gap-2">
+                <div class="author-image">
+                  <img
+                    class="img-fluid"
+                    src="./assets/imgs/bing.png"
+                    alt="Chandler Bing"
+                  />
+                </div>
+                <div class="author-name">Chandler Bing</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="blog-card h-100 d-flex flex-column gap-3">
+            <div class="blog-img">
+              <img
+                class="img-fluid"
+                src="./assets/imgs/blog2.png"
+                alt="blog card image"
+              />
+            </div>
+            <div
+              class="blog-body h-100 d-flex flex-column justify-content-between gap-4"
+            >
+              <div class="blog-body-wrapper d-flex flex-column gap-3">
+                <div class="blog-body-header d-flex gap-2">
+                  <div class="category">Category</div>
+                  <div class="date faded-text-grey">November 22, 2021</div>
+                </div>
+                <div class="blog-description f-20">
+                  Seed round direct mailing non-disclosure agreement graphical
+                  user interface rockstar.
+                </div>
+              </div>
+              <div class="blog-author d-flex gap-2">
+                <div class="author-image">
+                  <img
+                    class="img-fluid"
+                    src="./assets/imgs/green.png"
+                    alt="Rachel Green"
+                  />
+                </div>
+                <div class="author-name">Rachel Green</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="blog-card h-100 d-flex flex-column gap-3">
+            <div class="blog-img">
+              <img
+                class="img-fluid"
+                src="./assets/imgs/blog3.png"
+                alt="blog card image"
+              />
+            </div>
+            <div
+              class="blog-body h-100 d-flex flex-column justify-content-between gap-4"
+            >
+              <div class="blog-body-wrapper d-flex flex-column gap-3">
+                <div class="blog-body-header d-flex gap-2">
+                  <div class="category">Category</div>
+                  <div class="date faded-text-grey">November 22, 2021</div>
+                </div>
+                <div class="blog-description f-20">
+                  Beta prototype sales iPad gen-z marketing network effects
+                  value proposition
+                </div>
+              </div>
+              <div class="blog-author d-flex gap-2">
+                <div class="author-image">
+                  <img
+                    class="img-fluid"
+                    src="./assets/imgs/geller.png"
+                    alt="Monica Geller"
+                  />
+                </div>
+                <div class="author-name">Monica Geller</div>
               </div>
             </div>
           </div>
